force-app/main/default/objects/Executive_Snapshot__c/Executive_Snapshot__c.object-meta.xml
<CustomObject>
    <label>Executive Snapshot</label>
    <pluralLabel>Executive Snapshots</pluralLabel>
    <nameField>
        <displayFormat>EXS-{00000000}</displayFormat>
        <label>Executive Snapshot Number</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>Private</sharingModel>
</CustomObject>