force-app/main/default/objects/Executive_Snapshot__c/fields/Active_Partner_Count__c.field-meta.xml
<CustomField>
    <fullName>Active_Partner_Count__c</fullName>
    <label>Active Partner Count</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>