force-app/main/default/objects/Executive_Snapshot__c/fields/Average_Health_Score__c.field-meta.xml
<CustomField>
    <fullName>Average_Health_Score__c</fullName>
    <label>Average Health Score</label>
    <precision>5</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>