force-app/main/default/objects/Executive_Snapshot__c/fields/Computed_On__c.field-meta.xml
<CustomField>
    <fullName>Computed_On__c</fullName>
    <description
  >Freshness signal exposed to the UI - when ExecutiveSnapshotBatch last computed this row.</description>
    <label>Computed On</label>
    <type>DateTime</type>
</CustomField>