force-app/main/default/objects/Executive_Snapshot__c/fields/Narrative__c.field-meta.xml
<CustomField>
    <fullName>Narrative__c</fullName>
    <description
  >Optional, explicitly-generated AI summary of this snapshot's own already-computed numbers (ExecutiveNarrativeService) - never the source of truth for any figure shown.</description>
    <label>Narrative</label>
    <length>8192</length>
    <type>LongTextArea</type>
</CustomField>