force-app/main/default/objects/Executive_Snapshot__c/fields/Narrative_Generated_On__c.field-meta.xml
<CustomField>
    <fullName>Narrative_Generated_On__c</fullName>
    <label>Narrative Generated On</label>
    <type>DateTime</type>
</CustomField>