force-app/main/default/objects/Executive_Snapshot__c/fields/Open_AI_Recommendation_Count__c.field-meta.xml
<CustomField>
    <fullName>Open_AI_Recommendation_Count__c</fullName>
    <label>Open AI Recommendation Count</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>