force-app/main/default/objects/Executive_Snapshot__c/fields/Snapshot_Date__c.field-meta.xml
<CustomField>
    <fullName>Snapshot_Date__c</fullName>
    <description
  >One row per day, org-wide - ExecutiveSnapshotBatch updates this same row if re-run for the same day rather than creating a duplicate.</description>
    <label>Snapshot Date</label>
    <type>Date</type>
    <required>true</required>
</CustomField>