force-app/main/default/objects/Executive_Snapshot__c/fields/Total_At_Risk_Engagement_Count__c.field-meta.xml
<CustomField>
    <fullName>Total_At_Risk_Engagement_Count__c</fullName>
    <label>Total At Risk Engagement Count</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>