force-app/main/default/objects/Executive_Snapshot__c/fields/Total_Churned_Engagement_Count_Trailing_12mo__c.field-meta.xml
<CustomField>
    <fullName>Total_Churned_Engagement_Count_Trailing_12mo__c</fullName>
    <label>Total Churned Engagements (Trailing 12mo)</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>