force-app/main/default/objects/Executive_Snapshot__c/fields/Total_Open_Expansion_Count__c.field-meta.xml
<CustomField>
    <fullName>Total_Open_Expansion_Count__c</fullName>
    <label>Total Open Expansion Count</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>