force-app/main/default/objects/Executive_Snapshot__c/fields/Total_Renewal_Value_At_Risk__c.field-meta.xml
<CustomField>
    <fullName>Total_Renewal_Value_At_Risk__c</fullName>
    <label>Total Renewal Value At Risk</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>