force-app/main/default/objects/Executive_Snapshot__c/fields/Total_Revenue_Trailing_12mo__c.field-meta.xml
<CustomField>
    <fullName>Total_Revenue_Trailing_12mo__c</fullName>
    <label>Total Revenue (Trailing 12mo)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>